--- a/playbook_maw_prod.yml
+++ b/playbook_maw_prod.yml
@@ -3,6 +3,7 @@
   hosts: maw_prod
   vars_files:
     - "{{ controller_secrets_file }}"
+    - vars/maw_vars.yml
 
   tasks:
     - name: Configure Base
