consolidate inventory files - be more explicit about including environment var files rather than using groups

--- a/inventories/inventory_prod.yml
+++ b/inventories/inventory_prod.yml
@@ -2,11 +2,15 @@
 all:
   children:
 
-    current_prod:
+    ddclient:
       hosts:
         tifa:
 
-    maw_prod:
+    maw_current_prod:
+      hosts:
+        tifa:
+
+    maw:
       hosts:
         tifa:
         vmtest2:
