--- a/vars/maw_prod.yml
+++ b/vars/maw_prod.yml
@@ -25,6 +25,8 @@ maw__podman_publish_ports:
   - 80:80
   - 443:443
 
+maw_dev_prep__configure_tools: false
+
 # backup
 maw_prod_pg_bu__use_existing_backups: false
 maw_prod_gdrive_creds_bu__use_existing_backups: false
