--- a/vars/maw_test.yml
+++ b/vars/maw_test.yml
@@ -39,7 +39,7 @@ maw_host__allow_low_ports: false
 maw_host__deploy_admin_scripts: false
 maw_host__allow_firewall_services:
 maw_host__username: "{{ ansible_user_id }}"
-maw_host__password:
+maw_host__password: ""
 
 # maw google credentials
 maw_google_creds__restore: false
