--- a/vars/maw_vars.yml
+++ b/vars/maw_vars.yml
@@ -70,12 +70,31 @@ maw_prod_google_creds_bu__volume: maw-google-creds
 maw_prod_google_creds_bu__control_dir: "{{ maw__backup_root }}/google_credentials"
 maw_prod_google_creds_bu__temp_remote_dir: "{{ maw_current__homedir }}/_tmp_ansible_google_backup"
 
+# shared volume backup variables
+maw_prod_volume_bu__hostname: "{{ maw_current__prod_host }}"
+maw_prod_volume_bu__username: "{{ maw_current__prod_username }}"
+podman_vol_bu__hostname: "{{ maw_prod_volume_bu__hostname }}"
+podman_vol_bu__username: "{{ maw_prod_volume_bu__username }}"
+
 # current live site uploads backup
-maw_prod_uploads_bu__hostname: "{{ maw_current__prod_host }}"
-maw_prod_uploads_bu__username: "{{ maw_current__prod_username }}"
 maw_prod_uploads_bu__volume: maw-uploads
 maw_prod_uploads_bu__control_dir: "{{ maw__backup_root }}/uploads"
 maw_prod_uploads_bu__temp_remote_dir: "{{ maw_current__homedir }}/_tmp_ansible_upload_backup"
+
+# current live site api dataprotection backup
+maw_prod_apidp_bu__volume: maw-api-dataprotection
+maw_prod_apidp_bu__control_dir: "{{ maw__backup_root }}/dataprotection_api"
+maw_prod_apidp_bu__temp_remote_dir: "{{ maw_current__homedir }}/_tmp_ansible_apidp_backup"
+
+# current live site auth dataprotection backup
+maw_prod_authdp_bu__volume: maw-auth-dataprotection
+maw_prod_authdp_bu__control_dir: "{{ maw__backup_root }}/dataprotection_auth"
+maw_prod_authdp_bu__temp_remote_dir: "{{ maw_current__homedir }}/_tmp_ansible_authdp_backup"
+
+# current live site www dataprotection backup
+maw_prod_wwwdp_bu__volume: maw-www-dataprotection
+maw_prod_wwwdp_bu__control_dir: "{{ maw__backup_root }}/dataprotection_www"
+maw_prod_wwwdp_bu__temp_remote_dir: "{{ maw_current__homedir }}/_tmp_ansible_wwwdp_backup"
 
 # maw host
 maw_host__hostnames:
