correct settings for dev

--- a/vars/maw_dev.yml
+++ b/vars/maw_dev.yml
@@ -32,8 +32,8 @@ maw_dev_prep__configure_tools: true
 maw_prod_pg_bu__use_existing_backups: true
 maw_prod_gdrive_creds_bu__use_existing_backups: true
 maw_prod_google_creds_bu__use_existing_backups: true
-maw__do_uploads_backup: true
-maw__do_dataprotection_backup: true
+maw__do_uploads_backup: false
+maw__do_dataprotection_backup: false
 
 # maw host
 maw_host__allow_low_ports: false
