leverage role from playbook to prepare host

--- a/playbook_maw.yml
+++ b/playbook_maw.yml
@@ -75,32 +75,9 @@
     - vars/maw_vars.yml
 
   tasks:
-    - name: Configure Base OS
+    - name: Configure Host
       ansible.builtin.include_role:
-        name: fedora_base
-
-    - name: Add Service Account
-      ansible.builtin.user:
-        name: "{{ maw_host__username }}"
-        password: "{{ maw_host__password | password_hash('sha512') }}"
-        update_password: on_create
-        state: present
-
-    - name: Configure sshd
-      ansible.builtin.import_role:
-        name: sshd
-      vars:
-        sshd_allow_users:
-          - "{{ ansible_user }}"
-          - "{{ maw_host__username }}"
-      when: ansible_connection != 'local'
-
-    - name: Initialize podman
-      ansible.builtin.include_role:
-        name: podman_init
-      vars:
-        pod_init__linger_users:
-          - "{{ maw_host__username }}"
+        name: maw_host
 
 
 - name: Configure mikeandwan.us
