move the backup plays to their own role

--- a/playbook_maw.yml
+++ b/playbook_maw.yml
@@ -7,63 +7,11 @@
     - vars/maw_vars.yml
 
   tasks:
-    - name: backup postgres roles and databases
+    - name: Execute Backups
       ansible.builtin.include_role:
-        name: maw_prod_postgres_backup
+        name: maw_backup
       vars:
         ansible_user: "{{ maw_current__prod_username }}"
-
-    - name: backup gdrive credentials volume
-      ansible.builtin.include_role:
-        name: maw_prod_gdrive_creds_backup
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-
-    - name: backup google credentials volume
-      ansible.builtin.include_role:
-        name: maw_prod_google_creds_backup
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-
-    - name: backup files in uploads volume
-      ansible.builtin.include_role:
-        name: podman_backup_volume
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-        podman_vol_bu__volume: "{{ maw_prod_uploads_bu__volume }}"
-        podman_vol_bu__control_dir: "{{ maw_prod_uploads_bu__control_dir }}"
-        podman_vol_bu__temp_remote_dir: "{{ maw_prod_uploads_bu__temp_remote_dir }}"
-      when: maw__do_uploads_backup
-
-    - name: backup api dataprotection volume
-      ansible.builtin.include_role:
-        name: podman_backup_volume
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-        podman_vol_bu__volume: "{{ maw_prod_apidp_bu__volume }}"
-        podman_vol_bu__control_dir: "{{ maw_prod_apidp_bu__control_dir }}"
-        podman_vol_bu__temp_remote_dir: "{{ maw_prod_apidp_bu__temp_remote_dir }}"
-      when: maw__do_dataprotection_backup
-
-    - name: backup auth dataprotection volume
-      ansible.builtin.include_role:
-        name: podman_backup_volume
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-        podman_vol_bu__volume: "{{ maw_prod_authdp_bu__volume }}"
-        podman_vol_bu__control_dir: "{{ maw_prod_authdp_bu__control_dir }}"
-        podman_vol_bu__temp_remote_dir: "{{ maw_prod_authdp_bu__temp_remote_dir }}"
-      when: maw__do_dataprotection_backup
-
-    - name: backup www dataprotection volume
-      ansible.builtin.include_role:
-        name: podman_backup_volume
-      vars:
-        ansible_user: "{{ maw_current__prod_username }}"
-        podman_vol_bu__volume: "{{ maw_prod_wwwdp_bu__volume }}"
-        podman_vol_bu__control_dir: "{{ maw_prod_wwwdp_bu__control_dir }}"
-        podman_vol_bu__temp_remote_dir: "{{ maw_prod_wwwdp_bu__temp_remote_dir }}"
-      when: maw__do_dataprotection_backup
 
 
 - name: Prepare host
